--- a/styles/base/_formularios.scss
+++ b/styles/base/_formularios.scss
@@ -51,7 +51,7 @@
 
 
         &:hover{
-            background-color:darken($color: $naranja, $amount: 10%)
+            @include oscuro($naranja , 10)
         }
     }
 
